<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context="co.edu.uniquindio.android.electiva.acreditacionuq.fragment.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|top">

        <Button
            android:id="@+id/btn_cambiar_usuario"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_cambiar_usuario"
            android:text="@string/cambiar_usuario"
            android:textSize="@dimen/btn_cambiar_usuario"
            android:layout_gravity="right"
            android:background="@drawable/mybutton"
            android:layout_marginBottom="@dimen/margin_text"/>

        <TextView
            android:id="@+id/text_bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="@dimen/text_bienvenido"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_text"/>

        <Button
            android:id="@+id/btn_jugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugar"
            android:textSize="@dimen/btn_jugar"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/mybutton"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditos"
        android:textSize="@dimen/text_creditos"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|bottom"/>

</FrameLayout>
