<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context="co.edu.uniquindio.android.electiva.acreditacionuq.fragment.NewUserFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="@dimen/text_new_user"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_text"/>

    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="@dimen/edit_text_new_user"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_edit_new_user"
        android:layout_gravity="center_horizontal"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginBottom="@dimen/margin_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="@dimen/text_new_user"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_text"/>

    <EditText
        android:id="@+id/edit_correo"
        android:layout_width="@dimen/edit_text_new_user"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_edit_new_user"
        android:layout_gravity="center_horizontal"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginBottom="@dimen/margin_text"/>

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:textSize="@dimen/text_new_user"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mybutton"/>

</LinearLayout>
